fix overflow

--- a/web/style.css
+++ b/web/style.css
@@ -105,7 +105,7 @@ body {
     transition: 1s;
 }
 .header:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 .main {
     max-width: 100%;
